--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -45,16 +45,26 @@
                     </li>
 
                     <!--  -->
-                    <li class="nav-item mx-2">
-                        <a class="nav-link" href="{% url 'login' %}">Login</a>
-                    </li>
+                    {% if request.user.is_authenticated %}
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
-
+                    
+                    {% if request.user.is_staff %}
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                     </li>
+                    {% endif %}
+               
+                    
+                    {% else %}
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    {% endif %}
+
+                    
+
                 
                 </ul>
                 
