--- a/app/templates/dashboard/edit_post.html
+++ b/app/templates/dashboard/edit_post.html
@@ -4,23 +4,36 @@
 {% block content %}
 
 <div class="text-black">
-    <a href="{% url 'dashboard' %}">&larr; Back</a>
-    <div class="admin-title">
-      <h2>Edit Post</h2>
-    
-    </div>
-    
-    <form action="" method="POST">
-        {% csrf_token %}
-      <label for="title"><b>Title</b></label>
-      <input type="text" placeholder="Post Title" name="title" value="{{article_obj.title}}">
-    
-      <label for="body"><b>Content</b></label>
-      <textarea name="body" cols="50" rows="10"></textarea>
-    
+  <a href="{% url 'dashboard' %}">&larr; Back</a>
+  <div class="admin-title">
+    <h2>Edit Post</h2>
+
+  </div>
+
+  <form action="" method="POST">
+    {% csrf_token %}
+      <p>
+        <label for="id_title">Title:</label>
+        <input type="text" name="title" maxlength="100" required id="id_title" value="{{article_obj.title}}">
+      </p>
+
+
+      <p>
+        <label for="mytextarea">Description:</label>
+        <textarea class="tinymce" cols="30" id="mytextarea" name="description" rows="10">{{article_obj.description}}</textarea>
+      </p>
+
+
+      <p>
+        <label for="id_slug">Slug:</label>
+        <input type="text" name="slug" maxlength="100" required id="id_slug" value="{{article_obj.slug}}">
+      </p>
+
+
       <input type="submit" value="Update" class="btn">
-    
-    </form>
-</div>
+
+  </form>
+
+  </div>
 
 {% endblock %}
