--- a/app/templates/news_home.html
+++ b/app/templates/news_home.html
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
 
-                            <span class="card-text">{{article.description|truncatewords:"15"}}</span>
+                            <span class="card-text">{{article.description|truncatewords:"15"|safe}}</span>
                         </div>
                     </a>
                 </div>
