--- a/app/templates/dashboard/edit_post.html
+++ b/app/templates/dashboard/edit_post.html
@@ -12,7 +12,7 @@
 
   <form action="" method="POST">
     {% csrf_token %}
-      <p>
+      <!-- <p>
         <label for="id_title">Title:</label>
         <input type="text" name="title" maxlength="100" required id="id_title" value="{{article_obj.title}}">
       </p>
@@ -27,9 +27,9 @@
       <p>
         <label for="id_slug">Slug:</label>
         <input type="text" name="slug" maxlength="100" required id="id_slug" value="{{article_obj.slug}}">
-      </p>
+      </p> -->
 
-
+      {{form.as_p}}
       <input type="submit" value="Update" class="btn">
 
   </form>
