--- a/app/templates/dashboard/add_post.html
+++ b/app/templates/dashboard/add_post.html
@@ -11,7 +11,7 @@
         <h2>Add New Post</h2>
     </div>
 
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{form.as_p}}
         <input type="submit" value="Add" class="btn">
