--- a/app/templates/dashboard/edit_post.html
+++ b/app/templates/dashboard/edit_post.html
@@ -10,7 +10,7 @@
 
   </div>
 
-  <form action="" method="POST">
+  <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Update" class="btn">
